# SeetaFaceEngine

FaceAlignment/: CMakeLists.txt
FaceAlignment/src/test/: face_alignment_test.cpp
FaceAlignment/tools/: CMakeLists.txt  fddd_evaluation.cpp
FaceDetection/: .gitignore  CMakeLists.txt
FaceDetection/src/test/: facedetection_test.cpp
FaceIdentification/: CMakeLists.txt
FaceIdentification/src/test/: CMakeLists.txt  test_face_recognizer.cpp  test_face_verification.cpp
